# RepoSeiri

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
crates/seiri-calibration/: Cargo.toml
crates/seiri-calibration/src/: lib.rs  local_prior.rs  private_overlay.rs  streaming.rs
crates/seiri-calibration/src/streaming/: aggregate.rs
crates/seiri-calibration/src/streaming/aggregate/: output.rs
crates/seiri-cli/: Cargo.toml
crates/seiri-cli/src/: codex.rs  main.rs
crates/seiri-cli/src/codex/: request.rs
crates/seiri-cli/tests/: block_ab_scope_cli.rs  block_ad_diff_cli.rs  canonical_cli.rs  diff_plan_cli.rs  q19_cli.rs  scope_cli.rs  standalone_launcher.rs
crates/seiri-codex/: Cargo.toml
crates/seiri-core/: Cargo.toml
crates/seiri-delta/: Cargo.toml
crates/seiri-digest/: Cargo.toml
crates/seiri-fs/: Cargo.toml
crates/seiri-git-local/: Cargo.toml
crates/seiri-git-local/src/: discovery.rs  git.rs  lib.rs  scope.rs
crates/seiri-github-local/: Cargo.toml
crates/seiri-markdown/: Cargo.toml
crates/seiri-patterns/: Cargo.toml
crates/seiri-planner/: Cargo.toml
crates/seiri-profiles/: Cargo.toml
crates/seiri-remote/: Cargo.toml
crates/seiri-report/: Cargo.toml
crates/seiri-report/src/: claims.rs  evidence.rs  fixture_runner.rs  holdout.rs  lib.rs  obligation_graph.rs  propositions.rs  route_content.rs  route_priority.rs  source_digest.rs  wording.rs
crates/seiri-report/src/fixture_runner/: comparator.rs
docs/: README.md  hygiene.md  lifecycle.md  migration-v2.md  migration-v3.md  migration-v4.md  publication-readiness.md  release.md  self-audit.md
docs/design/: README.md  baseline-and-profiles.md  completion-batch-protocol.md  current-rust-architecture.md  low-level-claim-boundary-roadmap.md  r10-sip-v1-protocol.md  r10-sip-v1-template.json  r11-sccp-v1-protocol.md  r11-sccp-v1-template.json  r9-sip-v1-protocol.md  r9-sip-v1-template.json  rcbp-v1-template.json  repair-implementation-and-verification.md  repository-trust-graph.md  roadmap-and-implementation-blocks.md  roadmap-v10-closure-and-product-integrity.md  roadmap-v11-semantic-compression.md  roadmap-v4-low-level-expansion.md  roadmap-v5-legacy-removal.md  roadmap-v6-completion.md  roadmap-v7-calibrated-assertion.md  roadmap-v8-trust-contract-integrity.md  roadmap-v9-semantic-identity-verification-closure.md  rtip-v1-protocol.md  rtip-v1-template.json
fixtures/: calibration-dataset.json  calibration-holdout-corpus.v1.json  calibration-local-only-dataset.json  calibration-records.jsonl
fixtures/block-x-true-conflict/: README.md  SECURITY-ALT.md
fixtures/conflicting-canonical-targets/: SECURITY.md
fixtures/docs-routed-repo/: README.md
fixtures/holdout-consistency-clean/: README.md
fixtures/holdout-consistency-proposition/: README.md
fixtures/holdout-wording-code-only/: README.md
fixtures/holdout-wording-visible/: README.md
fixtures/hygiene-self-audit-repo/: .gitattributes  .gitignore  README.md
fixtures/lifecycle-route-repo/: CHANGELOG.md  README.md
fixtures/markdown-span-repo/: README.md
fixtures/minimal-repo/: README.md
fixtures/missing-readme-repo/: LICENSE
fixtures/nested-license-only-repo/: README.md
fixtures/profile-cli-regression/: CHANGELOG.md  Cargo.toml  README.md  SUPPORT.md
fixtures/profile-docs-regression/: CONTRIBUTING.md  README.md
fixtures/profile-infra-regression/: README.md  SECURITY.md
fixtures/profile-library-regression/: CHANGELOG.md  Cargo.toml  README.md
fixtures/profile-ml-regression/: CHANGELOG.md  README.md
fixtures/profile-product-regression/: CHANGELOG.md  README.md  SUPPORT.md
fixtures/profile-research-regression/: LICENSE  README.md
fixtures/profile-runtime-regression/: CHANGELOG.md  README.md  SECURITY.md
fixtures/profile-template-regression/: CHANGELOG.md  README.md  action.yml
fixtures/profile-tutorial-regression/: README.md  SUPPORT.md
fixtures/readme-route-map-v2-repo/: README.md
fixtures/readme-route-repo/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  (+3 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: audit_delta.rs  calibration_jsonl.rs  codeowners.rs  executable_pack.rs  gitfile.rs  github_yaml.rs  markdown.rs  patch_span.rs  predicate.rs  schema_decoder.rs
schemas/: seiri.analysis.v2.json  seiri.audit-delta.v2.json  seiri.calibration-corpus.v1.json  seiri.calibration-holdout.v1.json  seiri.calibration.v2.json  seiri.codex.v2.json  seiri.completion.v1.json  seiri.completion.v2.json  seiri.completion.v3.json  seiri.error.v1.json  seiri.executable-pattern-pack.v2.json  seiri.local-calibration-priors.v2.json  seiri.patch-plan.v2.json  seiri.portable-audit.v2.json
src/: lib.rs
tests/: audit_delta_planner.rs  block_aa_route_content_contract.rs  block_ab_repository_scope.rs  block_ac_structured_github_semantics.rs  block_ad_audit_delta_planner.rs  block_l_operational_routes.rs  block_p_regression_suite.rs  block_x_semantic_privacy.rs  block_z_executable_pattern_pack.rs  calibrated_assertion.rs  calibration.rs  calibration_holdout.rs  canonical_codex.rs  canonical_evidence.rs  canonical_patch_plan.rs  canonical_report.rs  claim_core.rs  codex_context.rs  completion_batch_protocol.rs  completion_contract.rs  content_claim_builder.rs  evidence_closed_routes.rs  executable_pattern_pack.rs  facet_obligation_conflict.rs  github_local_structured.rs  hostile_input_corpus.rs  lifecycle_route.rs  local_evidence_coverage.rs  markdown_extraction.rs  operational_routes.rs  patch_planner.rs  patch_proposal_ir.rs  pattern_baseline.rs  pattern_profile_semantics.rs  privacy_guard.rs  product_surface.rs  profile_branching.rs  profile_route_regression.rs  q11_public_surface_regression.rs  q11_regression_suite.rs  (+29 more)
xtask/: Cargo.toml
xtask/src/: bundle.rs  calibration.rs  completion.rs  main.rs  supervisor.rs
xtask/src/supervisor/: tests.rs
(+157 files in other folders)
