[package]
name = "reposeiri-workspace"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/seiri-core",
    "crates/seiri-fs",
    "crates/seiri-markdown",
    "crates/seiri-patterns",
    "crates/seiri-profiles",
    "crates/seiri-planner",
    "crates/seiri-calibration",
    "crates/seiri-codex",
    "crates/seiri-report",
    "crates/seiri-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
seiri-core = { path = "crates/seiri-core" }
seiri-fs = { path = "crates/seiri-fs" }
seiri-markdown = { path = "crates/seiri-markdown" }
seiri-patterns = { path = "crates/seiri-patterns" }
seiri-profiles = { path = "crates/seiri-profiles" }
seiri-planner = { path = "crates/seiri-planner" }
seiri-calibration = { path = "crates/seiri-calibration" }
seiri-codex = { path = "crates/seiri-codex" }
seiri-report = { path = "crates/seiri-report" }
serde_json.workspace = true
