[package]
name = "reposeiri-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
tempfile = "3"
seiri-calibration = { path = "../crates/seiri-calibration" }
seiri-core = { path = "../crates/seiri-core" }
seiri-delta = { path = "../crates/seiri-delta" }
seiri-git-local = { path = "../crates/seiri-git-local" }
seiri-markdown = { path = "../crates/seiri-markdown" }
seiri-patterns = { path = "../crates/seiri-patterns" }
seiri-report = { path = "../crates/seiri-report" }

[[bin]]
name = "markdown"
path = "fuzz_targets/markdown.rs"
test = false
doc = false

[[bin]]
name = "github_yaml"
path = "fuzz_targets/github_yaml.rs"
test = false
doc = false

[[bin]]
name = "codeowners"
path = "fuzz_targets/codeowners.rs"
test = false
doc = false

[[bin]]
name = "predicate"
path = "fuzz_targets/predicate.rs"
test = false
doc = false

[[bin]]
name = "patch_span"
path = "fuzz_targets/patch_span.rs"
test = false
doc = false

[[bin]]
name = "calibration_jsonl"
path = "fuzz_targets/calibration_jsonl.rs"
test = false
doc = false

[[bin]]
name = "gitfile"
path = "fuzz_targets/gitfile.rs"
test = false
doc = false

[[bin]]
name = "executable_pack"
path = "fuzz_targets/executable_pack.rs"
test = false
doc = false

[[bin]]
name = "schema_decoder"
path = "fuzz_targets/schema_decoder.rs"
test = false
doc = false

[[bin]]
name = "audit_delta"
path = "fuzz_targets/audit_delta.rs"
test = false
doc = false
