[package]
name = "seiri-git-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
seiri-core = { path = "../seiri-core" }
gix.workspace = true
serde_json.workspace = true
toml.workspace = true
home.workspace = true
time.workspace = true
indexmap.workspace = true
url.workspace = true
tempfile.workspace = true
gix-trace.workspace = true
clru.workspace = true
unicode-bom.workspace = true
gix-bitmap.workspace = true
gix-chunk.workspace = true
gix-validate.workspace = true
