[package]
name = "seiri-git-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
seiri-core = { path = "../seiri-core" }
gix.workspace = true
gix-tempfile.workspace = true
serde_json.workspace = true
toml.workspace = true
time.workspace = true
